--- a/views/get-market.html
+++ b/views/get-market.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <label for="start">Starting time</label>
-    <input type="datetime" name="start" id="start">
+    <input type="datetime-local" name="start" id="start">
     <label for="end">Ending time</label>
-    <input type="datetime" name="end" id="end">
+    <input type="datetime-local" name="end" id="end">
     <label for="resolution">Resolution</label>
     <input type="number" name="resolution" id="resolution">
     <button onclick="GetData()"></button>
