--- a/public/style/get-market.css
+++ b/public/style/get-market.css
@@ -1,16 +1,34 @@
 .timespan-select {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    border: solid;
+    border-radius: 12px;
+    flex-wrap: wrap;
 }
 
 .ts-button {
-    margin: 25px 12px;
+    margin: 2vw 2vw;
     border-radius: 5px;
-    padding: 5px 6px;
+    padding: 4vw 5vw;
     color: slategray;
 }
 
 .ts-button-selected {
     background-color: #1b5e20;
     color: white;
+}
+
+.market-title {
+    text-align: center;
+}
+
+h1 {
+    margin-bottom: 0vh;
+}
+
+#maingraph {
+    margin-top: 1vh;
+    margin-bottom: 3vh;
 }
