--- a/views/get-market.html
+++ b/views/get-market.html
@@ -12,6 +12,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
 </head>
 <body>
+    <div class="market-title">
+        <h1>Cardano</h1>
+    </div>
+
     <div id="maingraph"></div>
 
     <div class="timespan-select">
