--- a/public/style/get-market.css
+++ b/public/style/get-market.css
@@ -1,10 +1,59 @@
+@font-face {
+    font-family: 'Coolvetica';
+    src: url('../font/coolvetica rg.ttf') format('truetype');
+}
+
+body {
+    background-color: #1b1b1b;
+    margin: 0;
+    overflow-y: hidden;
+    font-family: 'Coolvetica';
+}
+
+.main-display {
+    width: 100%;
+    overflow-y: scroll;
+    height: 100vh;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.main-display::-webkit-scrollbar {
+    display: none;
+}
+
+h1 {
+    margin-bottom: 0vh;
+    color: rgb(244, 244, 244);
+    font-family: 'Coolvetica';
+    font-weight: 400;
+    letter-spacing: 0.002em;
+    font-size: 3em;
+}
+
+
+.market-title {
+    text-align: center;
+}
+
+#maingraph {
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    margin-left: 0; 
+    border-bottom: solid 3px rgb(42, 42, 42);
+}
+
+.timespan-select-wrapper {
+    width: 100%;
+    overflow:auto
+}
+
 .timespan-select {
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: center;
-    border: solid;
-    border-radius: 12px;
     flex-wrap: wrap;
 }
 
@@ -16,19 +65,118 @@
 }
 
 .ts-button-selected {
-    background-color: #1b5e20;
+    background-color: #ab22eb;
     color: white;
 }
 
-.market-title {
-    text-align: center;
+h2 {
+    margin-bottom: 1.5%;
+    color: rgb(244, 244, 244);
+    font-family: 'Coolvetica';
+    font-weight: 400;
+    letter-spacing: 0.004em;
 }
 
-h1 {
-    margin-bottom: 0vh;
+.sidemarkets {
+    display: none;
 }
 
-#maingraph {
-    margin-top: 1vh;
-    margin-bottom: 3vh;
+.investments {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 1.5em;
+}
+
+.investments--row {
+    width: 100%;
+    overflow: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    max-width: 750px;
+}
+
+.investments--title {
+    float: left;
+    display: flex;
+    flex-direction: column;
+    height:inherit;
+    justify-content: center;
+    color: rgb(109, 105, 114);
+    font-size: 0.5em;
+    margin-left: 3.5%; 
+}
+
+.investments--title > span:first-child {
+    color: white;
+    font-size: 2.5em;
+    margin-left: -1.5%;
+    line-height: 1em;
+}
+
+.investments--data {
+    float: right;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    margin-right: 3.5%;
+}
+
+.investments--data div:first-child {
+    margin-right: -3.5%;
+}
+
+.investments--data div:first-child > span {
+    float: right;
+    font-size: 1.1em;
+    padding-top: 0.5em;
+    line-height: 0.4em;
+}
+
+.investments--data div:last-child > span {
+    font-size: 0.65em;
+    line-height: 0.8em;
+}
+
+.investments--data div:last-child > span:first-child {
+    color: rgb(109, 105, 114);
+}
+
+.investments--changep {
+    color: greenyellow;
+}
+
+@media only screen and (min-width: 600px) {
+    .main-display {
+        float:left;
+        width: 80%;
+        margin: 0;
+    }
+
+    .timespan-select {
+        float:right;
+        width: 50%;
+        max-width: 250px;
+    }
+
+    .ts-button {
+        margin: 2% 2%;
+        border-radius: 5px;
+        padding: 2% 3.5%;
+    }
+
+    .sidemarkets {
+        display: initial;
+        float: right;
+        width: 20%;
+    }
+    
+    .sidemarkets--item {
+        margin: auto 10%;
+    }
+    
+    .investments {
+        font-size: 2em;
+    }
 }
