--- a/public/style/get-market.css
+++ b/public/style/get-market.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Coolvetica';
-    src: url('/font/coolvetica rg.ttf') format('truetype');
+    src: url('../font/coolvetica rg.ttf') format('truetype');
 }
 
 body {
@@ -81,11 +81,18 @@ h2 {
     display: none;
 }
 
-.investments {
+.investments--wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content:space-around;
+}
+
+.investments {
+    display: flex;
+    flex-direction: column;
     font-size: 1.5em;
+    width: 100%;
+    max-width: 750px;
 }
 
 .investments--row {
@@ -143,8 +150,11 @@ h2 {
     color: rgb(109, 105, 114);
 }
 
-.investments--changep {
+.investments--changep__pos {
     color: greenyellow;
+}
+.investments--changep__neg {
+    color: red;
 }
 
 @media only screen and (min-width: 600px) {
