--- a/views/get-market.html
+++ b/views/get-market.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get data</title>
 
-    <link rel="stylesheet" href="/style/get-market.css">
+    <link rel="stylesheet" href="../public/style/get-market.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
@@ -28,29 +28,14 @@
                 <div onclick="HandleButton(this)" class="ts-button">M</div>
             </div>
         </div>
-
-        <section class="investments">
-            <div class="investments--row">
-                <div class="investments--title">
-                    <span>Cardano</span>
-                    <span>ADA-EUR</span>
-                </div>
-                <div class="investments--data">
-                    <div>
-                        <span>€50.00</span>
-                    </div>
-                    <div>
-                        <span>€0.9999990</span>
-                        <span class="investments--changep">200.99%</span>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <div class="investments--wrapper">
+            <section class="investments"></section>
+        </div>
     </div>
 
     <div class="sidemarkets"></div>
 
-    <script src="/script/get-market.js"></script>
+    <script src="../public/script/get-market.js"></script>
 </body>
 
 </html>
