--- a/views/get-market.html
+++ b/views/get-market.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get data</title>
 
-    <link rel="stylesheet" href="../public/style/get-market.css">
+    <link rel="stylesheet" href="/style/get-market.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
@@ -35,7 +35,7 @@
 
     <div class="sidemarkets"></div>
 
-    <script src="../public/script/get-market.js"></script>
+    <script src="/script/get-market.js"></script>
 </body>
 
 </html>
