--- a/views/get-market.html
+++ b/views/get-market.html
@@ -35,6 +35,7 @@
 
     <div class="sidemarkets"></div>
 
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/script/get-market.js"></script>
 </body>
 
