--- a/views/get-market.html
+++ b/views/get-market.html
@@ -36,7 +36,7 @@
     <div class="sidemarkets"></div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/script/get-market.js"></script>
+    <script src="/script/get-market.js" type="module"></script>
 </body>
 
 </html>
