--- a/views/get-market.html
+++ b/views/get-market.html
@@ -29,7 +29,11 @@
             </div>
         </div>
         <div class="investments--wrapper">
-            <section class="investments"></section>
+            <section class="investments">
+                <div id="drop-area">
+                    <input type="file" id="file-selector">Import Transactions</button>
+                </div>
+            </section>
         </div>
     </div>
 
