--- a/public/style/get-market.css
+++ b/public/style/get-market.css
@@ -12,7 +12,7 @@ body {
 
 .main-display {
     width: 100%;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
     height: 100vh;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
