--- a/views/get-market.html
+++ b/views/get-market.html
@@ -31,7 +31,11 @@
         <div class="investments--wrapper">
             <section class="investments">
                 <div id="drop-area">
-                    <input type="file" id="file-selector">Import Transactions</button>
+                    <h3>Import Transactions</h3>
+                    <label class="custom-file-upload">
+                        <input type="file" id="file-selector">
+                        Upload .csv
+                    </label>
                 </div>
             </section>
         </div>
