--- a/public/style/get-market.css
+++ b/public/style/get-market.css
@@ -167,6 +167,23 @@ h2 {
 
 #drop-area {
     height: 100vh;
+    text-align: center;
+}
+
+h3 {
+    color: white;
+    font-size: 1.05em;
+}
+
+#drop-area > label {
+    color: white;
+    border-radius: 10px;
+    padding: 1% 2%;
+    background-color: rgb(42, 42, 42);
+}
+
+input[type="file"] {
+    display:none;
 }
 
 @keyframes flash-update-green {
