--- a/public/style/get-market.css
+++ b/public/style/get-market.css
@@ -19,7 +19,7 @@ body {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.main-display::-webkit-scrollbar {
+.main-display::-webkit-scrollbar, .sidemarkets::-webkit-scrollbar {
     display: none;
 }
 
@@ -79,6 +79,10 @@ h2 {
 
 .sidemarkets {
     display: none;
+    overflow-y: scroll;
+    height: 100vh;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .investments--wrapper {
